Fix page jumping

--- a/src/blocks/rate/_rate.scss
+++ b/src/blocks/rate/_rate.scss
@@ -1,4 +1,5 @@
 .rate {
+  margin-bottom: 240px;
   color: $text;
 
   &__inner {
@@ -21,6 +22,7 @@
     display: flex;
     align-items: flex-start;
     justify-content: space-between;
+    min-height: 180px;
   }
 
   &__price {
